# heureka-test

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: python-app.yml
heureka/: main.py
heureka/adapters/: mongo.py  rabbit.py  rest.py  stdreporter.py
heureka/merger/: merger.py  model.py  ports.py
tests/adapters/: test_mongo.py  test_rest.py
tests/merger/: test_on_offer.py
tests/merger/scenarios/: new_product_multiple_match_id.json  new_product_no_match_id.json  new_product_one_match_id.json  update_product_multiple_match_ids_second_offer_all_different.json  update_product_multiple_match_ids_second_offer_same_name_different_value.json  update_product_multiple_match_ids_second_offer_some_equal.json  update_product_multiple_match_ids_second_offer_update_same_name_different_value.json  update_product_multiple_match_ids_third_offer_same_name_different_value.json  update_product_one_match_id_one_offer.json
